--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,7 +5,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-             <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="{{ asset('/css/main.css')}}">
         <script type="text/javascript" src="{{ asset('/js/jquery.js')}}"></script>
         <script type="text/javascript" src="{{ asset('/js/carouFredSel.js')}}"></script>
@@ -17,7 +17,74 @@
     <link rel="icon" type="image/x-icon" href="{{ asset('logo.png') }}" />
 </head>
 <body>
-{% block body %}{% endblock %}
+    {% block body %}
+
+        <header>
+
+
+            <div class="row">
+
+                <div class="col-md-2">
+                    <div class="logo">
+                        <p class="lulu"><strong><a href="{{ path ('homepage') }}">Casa Irene</a></strong></p>
+
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <nav>
+                        <ul>
+                            <!--<li><a href="" class="active">Home</a></li>-->
+                            <li><a href="{{ path ('nuestrahistoria') }}">Nuestra historia</a></li>
+                            <li><a href="{{ path ('carta') }}">Carta</a></li>
+                            <li><a href="{{ path ('reservacliente') }}">Reservas</a></li>
+                            <li><a href="{{ path ('muestracomment') }}">Comentarios</a></li>
+                            <li><a href="{{ path ('areaclientes') }}">Área clientes</a></li>
+                            <li><a href="{{ path ('dondeestamos') }}">¿Dónde estamos?</a></li>
+                        </ul>
+                    </nav>
+                </div>
+
+
+                <div class="col-md-2">
+                    <br>  
+                    <ul class="social-network social-circle">
+                        <li><a href="https://www.instagram.com/?hl=es" class="icoInstagram" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com/" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/?lang=es" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://es.linkedin.com/" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="mailto:casairene@casairene.com" class="icoEnvelope" title="Envelope"><i class="fa fa-envelope"></i></a></li>
+                    </ul>
+
+
+                </div>
+                <div class="col-md-2">
+                    <nav>
+                        <ul>
+                            <li> <a href="{{ path ('homepage') }}">ES</a></li>
+                            <li><a href="{{ path ('homepage') }}">CAT</a></li>
+                            <li><a href="{{ path ('homepage') }}">EN</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </header><!--  end header  -->
+
+
+        <!--  start hero  -->
+        <section class="hero">
+            <div class="caption">
+                <h3><strong>Casa Irene</strong></h3>
+                <h4>
+                    <span class="rsep"></span>
+
+                    El restaurante donde te sientes como en casa.
+                    <span class="lsep"></span>
+                </h4>
+
+            </div>
+        </section><!--  end hero  -->
+  
+    {% endblock %}
 {% block javascripts %}{% endblock %}
 
 </body>   
