--- a/app/Resources/views/dondeestamos.html.twig
+++ b/app/Resources/views/dondeestamos.html.twig
@@ -4,139 +4,42 @@
 
     <body>
 
-        <header>
+        {{parent()}}
 
-
-            <div class="row">
-
-                <div class="col-md-2">
-                    <div class="logo">
-                        <p class="lulu"><strong><a href="{{ path ('homepage') }}">Casa Irene</a></strong></p>
-
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <nav>
-                        <ul>
-                            <!--<li><a href="" class="active">Home</a></li>-->
-                            <li><a href="{{ path ('nuestrahistoria') }}">Nuestra historia</a></li>
-                            <li><a href="{{ path ('carta') }}">Carta</a></li>
-                            <li><a href="{{ path ('reservacliente') }}">Reservas</a></li>
-                            <li><a href="{{ path ('muestracomment') }}">Comentarios</a></li>
-                            <li><a href="{{ path ('areaclientes') }}">Área clientes</a></li>
-                            <li><a href="{{ path ('dondeestamos') }}">¿Dónde estamos?</a></li>
-                        </ul>
-                    </nav>
-                </div>
-
-
-                <div class="col-md-2">
-                    <br>  
-                    <ul class="social-network social-circle">
-                        <li><a href="https://www.instagram.com/?hl=es" class="icoInstagram" title="Instagram"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="https://www.facebook.com/" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://twitter.com/?lang=es" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="https://es.linkedin.com/" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="mailto:casairene@casairene.com" class="icoEnvelope" title="Envelope"><i class="fa fa-envelope"></i></a></li>
-                    </ul>
-                   
-                    
-                </div>
-                        <div class="col-md-2">
-                             <nav>
-                        <ul>
-                        <li> <a href="{{ path ('homepage') }}">ES</a></li>
-                           <li><a href="{{ path ('homepage') }}">CAT</a></li>
-                              <li><a href="{{ path ('homepage') }}">EN</a></li>
-                              </ul>
-                               </nav>
-                    </div>
-            </div>
-        </header><!--  end header  -->
-
-
-        <!--  start hero  -->
-        <section class="hero">
-            <div class="caption">
-                <h3><strong>Casa Irene</strong></h3>
-                <h4>
-                    <span class="rsep"></span>
-
-                    El restaurante donde te sientes como en casa.
-                    <span class="lsep"></span>
-                </h4>
-
-            </div>
-        </section><!--  end hero  -->
         <div class="espacio">
-         <div class="direccion">
+            <div class="direccion">
                 <section class="info">
                     <div class="title">
                         <h3>Casa Irene</h3>
                         <span class="separator"></span>
-                    </div></section>
-        
-       
-                        
-                            <p>Almogàvers 123, 08018 Barcelona</p> 
-
-                            <p>933 04 17 27</p>
-                      
-                        <p>
-                            Domingo a jueves
-                            12:30 a 23:30<br/><br/>
-                            Viernes y sábados
-                            13:00 a 01:00
-                        </p>
                     </div>
-                    
-                    
-                    <div class="googleMap" style="width:100%;height:400px;">
-
-
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d95754.54582923392!2d2.1591404074207503!3d41.410364254091675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ce5e151b3383c3c!2sNetmind!5e0!3m2!1ses!2ses!4v1494234079122" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    </div>
-            </div>
-                
-             
-
-                
-      
-      
-
-
-
-
-
-
-
-        <!--  start footer  -->
-        <footer>
-            <div class="wrapper">
-
-
-
-
-
-                <!--  footer copyrights  -->
-
-
-                <section class="copyrights"> 
-
-                    <p class="lulu"><strong>Casa Irene</strong></p>
-
-
-
-
-
-
-
-                    <p>© Todos los derechos reservados 2017.</p>
-
                 </section>
+
+
+
+                <p>Almogàvers 123, 08018 Barcelona</p> 
+
+                <p>933 04 17 27</p>
+
+                <p>
+                    Domingo a jueves
+                    12:30 a 23:30<br/><br/>
+                    Viernes y sábados
+                    13:00 a 01:00
+                </p>
             </div>
-        </footer><!--  end footer  -->
-        <script src='../ga.js'></script>
+
+
+            <div class="googleMap" style="width:100%;height:400px;">
+
+
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d95754.54582923392!2d2.1591404074207503!3d41.410364254091675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ce5e151b3383c3c!2sNetmind!5e0!3m2!1ses!2ses!4v1494234079122" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+        </div>
+
+
+        {% include 'footer.html.twig' %}
+
     </body>
 </html>
 
