--- a/app/Resources/views/reservacliente.html.twig
+++ b/app/Resources/views/reservacliente.html.twig
@@ -3,71 +3,7 @@
 {% block body %}
 
     <body>
-
-        <header>
-
-
-            <div class="row">
-
-                <div class="col-md-2">
-                    <div class="logo">
-                        <p class="lulu"><strong><a href="{{ path ('homepage') }}">Casa Irene</a></strong></p>
-
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <nav>
-                        <ul>
-                            <!--<li><a href="" class="active">Home</a></li>-->
-                            <li><a href="{{ path ('nuestrahistoria') }}">Nuestra historia</a></li>
-                            <li><a href="{{ path ('carta') }}">Carta</a></li>
-                            <li><a href="{{ path ('reservacliente') }}">Reservas</a></li>
-                            <li><a href="{{ path ('muestracomment') }}">Comentarios</a></li>
-                            <li><a href="{{ path ('areaclientes') }}">Área clientes</a></li>
-                            <li><a href="{{ path ('dondeestamos') }}">¿Dónde estamos?</a></li>
-                        </ul>
-                    </nav>
-                </div>
-
-
-                <div class="col-md-2">
-                    <br>  
-                    <ul class="social-network social-circle">
-                        <li><a href="https://www.instagram.com/?hl=es" class="icoInstagram" title="Instagram"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="https://www.facebook.com/" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://twitter.com/?lang=es" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="https://es.linkedin.com/" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="mailto:casairene@casairene.com" class="icoEnvelope" title="Envelope"><i class="fa fa-envelope"></i></a></li>
-                    </ul>
-                   
-                    
-                </div>
-                        <div class="col-md-2">
-                             <nav>
-                        <ul>
-                        <li> <a href="{{ path ('homepage') }}">ES</a></li>
-                           <li><a href="{{ path ('homepage') }}">CAT</a></li>
-                              <li><a href="{{ path ('homepage') }}">EN</a></li>
-                              </ul>
-                               </nav>
-                    </div>
-            </div>
-        </header><!--  end header  -->
-
-
-        <!--  start hero  -->
-        <section class="hero">
-            <div class="caption">
-                <h3><strong>Casa Irene</strong></h3>
-                <h4>
-                    <span class="rsep"></span>
-
-                    El restaurante donde te sientes como en casa.
-                    <span class="lsep"></span>
-                </h4>
-
-            </div>
-        </section><!--  end hero  -->
+        {{parent()}}
 
         <div style="position: absolute; top: 700px; left: 300px">
             <h2>Reserva tu mesa :</h2>
@@ -100,38 +36,8 @@
 
         </div>
 
+        {% include 'footer.html.twig' %}
 
-        
-        <!--  start footer  -->
-        <footer>
-            <div class="wrapper">
-
-
-
-
-
-                <!--  footer copyrights  -->
-
-                <div class="col-md-12">
-                    <section class="copyrights"> 
-
-                        <p class="lulu"><strong>Casa Irene</strong></p>
-
-
-
-
-
-
-
-                        <p>© Todos los derechos reservados 2017.</p>
-
-                    </section>
-                </div>
-
-            </div>
-        </footer><!--  end footer  -->
-
-    
     </body>
 </html>
 
@@ -139,5 +45,5 @@
 
 {% endblock %}
 
-  
+
 
